--- a/po/wesnoth/nl.po
+++ b/po/wesnoth/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:10+0300\n"
-"PO-Revision-Date: 2019-03-13 10:07+0100\n"
+"PO-Revision-Date: 2019-03-20 11:13+0100\n"
 "Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
 "Language-Team: Dutch <merijndevet@hotmail.com>\n"
 "Language: nl\n"
@@ -4653,7 +4653,7 @@ msgstr ""
 "het gif verwijderd wordt. Helers kunnen voorkomen dat een vergiftigde "
 "eenheid verzwakt, maar het gif zal niet verwijderd worden totdat de eenheid "
 "regenereert of een beurt begint in een dorp of naast een eenheid met het "
-"vermogen <i>Geneest</i>."
+"vermogen <i>Geneest Gif</i>."
 
 #. [tip]
 #: data/tips.cfg:80
@@ -5220,7 +5220,7 @@ msgid ""
 "big difference in a campaign."
 msgstr ""
 "Sommige eenheden met een hogere rang hebben belangrijke vaardigheden zoals "
-"<i>Leiderschap</i>, <i>Geneest</i>, of <i>Nachtzicht</i>. Wanneer deze "
+"<i>Leiderschap</i>, <i>Geneest Gif</i>, of <i>Nachtzicht</i>. Wanneer deze "
 "eenheden vroeg in de veldtocht beschikbaar worden kan dit voor een groot "
 "verschil zorgen."
 
@@ -7708,8 +7708,8 @@ msgid ""
 "1 HP."
 msgstr ""
 "Deze eenheid is vergiftigd. Hij zal elke beurt 8 HP verliezen, totdat hij "
-"genezing vindt in een dorp of bij een bevriende eenheid met het vermogen "
-"'geneest'.\n"
+"genezing vindt in een dorp of bij een bevriende eenheid met de vaardigheid "
+"'geneest gif'.\n"
 "\n"
 "Eenheden kunnen niet gedood worden door gif alleen. Het gif zal 1 HP over "
 "laten."
