--- a/po/wesnoth-anl/nl.po
+++ b/po/wesnoth-anl/nl.po
@@ -7,9 +7,9 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2019-03-13 08:14+0100\n"
-"Last-Translator: ai0867 <ai0867@gmail.com>\n"
-"Language-Team: Dutch translation <ai0867@gmail.com>\n"
+"PO-Revision-Date: 2019-03-20 11:14+0100\n"
+"Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
+"Language-Team: Dutch <merijndevet@hotmail.com>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
