Fix some typos in the wesnoth-tb/ru.po

--- a/po/wesnoth-tb/ru.po
+++ b/po/wesnoth-tb/ru.po
@@ -192,13 +192,13 @@ msgstr ""
 "12 V, 363 ГВ\n"
 "Отрывок из журнала Бьярна из Магрэ\n"
 "\n"
-"Я думаю моя магия может оказаться сильнее его. Но он прячется в горах, "
+"Я думаю, моя магия может оказаться сильнее его. Но он прячется в горах, "
 "хорошо охраняемый своими слугами и я призываю испуганных крестьян чтобы они "
 "сражались с его приспешниками клинками и палками. Мне нужен мой брат; у него "
 "всегда голова была для сражений лучше чем у меня.\n"
 "\n"
 "Обратит ли он внимание на зов? Я не знаю, сохранил ли он амулет; мы не "
-"разговаривали с того дня на Тоэн Карик. Если он не придёт изза меня, "
+"разговаривали с того дня на Тоэн Карик. Если он не придёт из-за меня, "
 "возможно, он придёт, чтобы помочь деревне в её безнадёжный час."
 
 #. [part]
@@ -1418,7 +1418,7 @@ msgstr ""
 "Отрывок из журнала Бьярна из Магрэ\n"
 "\n"
 "Хотя теперь мне намного легче, в мыслях я часто возвращаюсь в Тоэн Карик. Мы "
-"должны были отбиться от окров без особых потерь — атака Арвита зажала бы их "
+"должны были отбиться от орков без особых потерь — атака Арвита зажала бы их "
 "в клещи, и несомненно принесла бы победу — если бы не я. Я опрометчиво "
 "бросил позади своих людей. Я ранил военачальника и вынудил его спасаться "
 "бегством, но цена оказалась слишком велика. Останься я со своими людьми — "
