--- a/po/wesnoth-thot/zh_TW.po
+++ b/po/wesnoth-thot/zh_TW.po
@@ -1,17 +1,21 @@
-# , 2009.
+# The Battle for Wesnoth - Traditional Chinese Translations
+# Copyright (C) 2005-2019 Wesnoth development team
+# This file is distributed under the same license as the Battle for Wesnoth package.
+# 李昆融 <likwueron@gmail.com>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.3.12+dev\n"
+"Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
-"PO-Revision-Date: 2018-11-03 18:04+0800\n"
-"Last-Translator: Li, Kwunron <likwueron>\n"
-"Language-Team: Chinese Traditional <steven2880@gmail.com>\n"
-"Language: \n"
+"PO-Revision-Date: 2019-03-28 20:38+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
+"Language-Team: Wesnoth Traditional Chinese Team\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
@@ -71,7 +75,7 @@ msgstr ""
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:26
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "（中等難度，11個場㬌。）"
+msgstr "（中等等級，11個章節。）"
 
 #. [about]
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:29
@@ -990,25 +994,37 @@ msgstr "這群拿斧頭的傢伙別想接近我們的幼龍。攻擊！"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:198
+#, fuzzy
+#| msgid ""
+#| "We’re grateful for your assistance. Moreover, I’d like to send a couple "
+#| "of our senior apprentices with you to the east. It has come time for them "
+#| "to be journeymen... and I sense something being born to the east that I "
+#| "do not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send a couple of our "
 "senior apprentices with you to the east. It has come time for them to be "
 "journeymen... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"我們感激你們的援助。我會派一對年長的學徒跟你們向東去。該是讓他們出去雲遊的時"
-"候了...而且，我感到東方出現了我不喜的東西。"
+"我們感激你們的援助。我會派幾位年長的學徒跟你們向東去。該是讓他們出去雲遊的時"
+"候了...而且，我感覺到東方出現了我不喜歡的東西。"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:203
+#, fuzzy
+#| msgid ""
+#| "We’re grateful for your assistance. Moreover, I’d like to send one of our "
+#| "senior apprentices with you to the east. It has come time for him to be a "
+#| "journeyman... and I sense something being born to the east that I do not "
+#| "like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send one of our senior "
 "apprentices with you to the east. It has come time for him to be a "
 "journeyman... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"我們感激你們的援助。我會派至少一位年長的學徒跟你們向東去。該是讓他出去雲遊的"
-"時候了...而且，我感到東方出現了我不喜的東西。"
+"我們感激你們的援助。我會派一位年長的學徒跟你們向東去。該是讓他出去雲遊的時候"
+"了...而且，我感覺到東方出現了我不喜歡的東西。"
 
 #. [unit]: type=Mage, id=Lorinne
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:212
@@ -1306,6 +1322,10 @@ msgstr "鞭子。手銬。不，阿根廷，即使我會懷疑一位智慧大師
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:379
+#, fuzzy
+#| msgid ""
+#| "They were seeking captives. To what purpose, I cannot say, but I doubt it "
+#| "was any good one."
 msgid ""
 "They were seeking captives. To what purpose, I cannot say. But I doubt it "
 "was any good one."
@@ -1487,6 +1507,10 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:330
+#, fuzzy
+#| msgid ""
+#| "A runemaster? There had been none such since Thursagan’s day. And for one "
+#| "to lead a holding was unheard-of; they tended towards the solitary life."
 msgid ""
 "A runemaster? There had been none such since Thursagan’s day. And for one to "
 "lead a holding was unheard-of; they tended towards the solitary life."
@@ -1531,6 +1555,11 @@ msgstr "真奇怪。鐵鎚不是武器，而是是用來製作器物的。為什
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:355
+#, fuzzy
+#| msgid ""
+#| "That’s for lords and loremasters to worry about, not the likes of me. I "
+#| "must see to my troop’s care. Food will be brought to you; rest well, we "
+#| "will speak again."
 msgid ""
 "That’s for lords and loremasters to worry about, not the likes of me. I must "
 "see to my troop’s care. Food will be brought to you; rest well, we will "
@@ -1736,11 +1765,18 @@ msgstr "藍克斯"
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:411
+#, fuzzy
+#| msgid "This place reeks of death."
 msgid "This place smells of death."
 msgstr "這地方有聞起來有死亡的氣息。"
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:416
+#, fuzzy
+#| msgid ""
+#| "It’s been... it’s been years since I’ve been down here. Only Karrag and "
+#| "his personal followers used this level. Why did I never wonder about that "
+#| "before?"
 msgid ""
 "It’s been... it’s been years since I’ve been down here. Only Karrag and his "
 "personal followers used this level. Why did I never wonder about that before?"
@@ -1750,6 +1786,10 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:422
+#, fuzzy
+#| msgid ""
+#| "Karrag’s will, and his dark magic. I think he has been casting glamours "
+#| "on all of you ever since he passed over."
 msgid ""
 "Karrag’s will, and his dark magic. I think he has been casting glamours on "
 "all of you ever since he passed over."
@@ -1771,6 +1811,11 @@ msgstr "這是一條大走廊。走道旁有幾個小房間；他在匆忙中可
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:437
+#, fuzzy
+#| msgid ""
+#| "More likely he has cloaked himself, thinking to run ahead to gather his "
+#| "followers. He could be within a spear-cast of us now and we wouldn’t know "
+#| "it in this gloom."
 msgid ""
 "More likely he has cloaked himself, thinking to run ahead to gather his "
 "followers. He could be within a spear-cast of us now and we wouldn’t know it "
@@ -1795,6 +1840,10 @@ msgstr ""
 
 #. [message]: speaker=Dranath
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:496
+#, fuzzy
+#| msgid ""
+#| "You cannot pass, fools. The doors I guard are sealed by the power of the "
+#| "Hammer itself."
 msgid ""
 "You cannot pass, fools. The doors I guard are sealed by the power of the "
 "Hammer itself."
@@ -1812,6 +1861,10 @@ msgstr "我想錯了。在我們來到這裡之前好像已經有某些邪惡力
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:537
+#, fuzzy
+#| msgid ""
+#| "It seems that guard spoke truth. These doors cannot be forced open by any "
+#| "means we have!"
 msgid ""
 "It seems that guard spoke truth. These doors cannot be forced open by any "
 "means we have!"
@@ -1829,6 +1882,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:557
+#, fuzzy
+#| msgid "The key has been uttered, these doors should open..."
 msgid "The key has been uttered, these doors should open..."
 msgstr "咒語完成，這些門應該開啟了..."
 
@@ -1989,6 +2044,8 @@ msgstr "看起來像是某種傳送裝置。阻止它運作的好像是門後和
 
 #. [message]: speaker=Aragoth
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:1112
+#, fuzzy
+#| msgid "Our master’s ritual must not be interrupted. Stop them!"
 msgid "Our master’s ritual must not be interrupted. Stop them!"
 msgstr "我們主人的儀式不能被打斷。攔住他們！"
 
@@ -2247,6 +2304,15 @@ msgstr "蒙面矮人王"
 
 #. [unit_type]: id=Dwarvish Masked Lord, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Lord.cfg:17
+#, fuzzy
+#| msgid ""
+#| "Feared in dwarven legend is the Dwarf Lord who masks his face, using the "
+#| "formidable fighting powers of his kind without accounting to his peers "
+#| "and the loremasters of Dwarven-kind for the dark and bloody uses to which "
+#| "he puts his weapons. Like his barefaced kin, the Dwarf Lord wields axe "
+#| "and hammer with masterful skill, and can hit a target with a thrown hand "
+#| "axe at several paces. Though slow on their feet, these dwarves are a "
+#| "testament to the prowess of their kind."
 msgid ""
 "Feared in dwarven legend is the Dwarf Lord who masks his face, using the "
 "formidable fighting powers of his kind without accounting to his peers and "
@@ -2424,6 +2490,15 @@ msgid ""
 "Aaarrgh! Though I die, the flame of righteousness shall send you down to "
 "darkness!"
 msgstr "呃啊啊！ 我身雖死，但正義光輝將送你們下地獄！"
+
+#~ msgid "Villagers"
+#~ msgstr "村民"
+
+#~ msgid "Defeat the orcish leaders"
+#~ msgstr "擊敗半獸人指揮官"
+
+#~ msgid "Find and defeat Karrag"
+#~ msgstr "尋找並且擊敗葛瑞格"
 
 #~ msgid "morningstar"
 #~ msgstr "流星鎚"
